--- a/index.pug
+++ b/index.pug
@@ -10,7 +10,7 @@ html(lang="en")
 
     body 
         nav.navbar.navbar-expand-lg.bg-dark.navbar-dark 
-            .container 
+            .container.py-3
                 a.navbar-brand(href="#") Frontend Bootcamp
                 button.navbar-toggler(type="button" data-bs-toggle="collapse" data-bs-target="#navmenu")
                     span.navbar-toggler-icon
@@ -22,15 +22,24 @@ html(lang="en")
                             a.nav-link(href="#questions") Questions
                         li.nav-item
                             a.nav-link(href="#instructors") Instructors
-        section.bg-dark.text-light.p-5.textcenter
+        section.bg-dark.text-light.p-5.p-lg-0.pt-lg-5.textcenter.text-sm-start
             .container
-                .d-sm-flex
+                .d-sm-flex.align-items-center.justify-content-between
                     div
                         h1 Become a 
                             span.text-warning Web Developer
-                        p.lead.
+                        p.lead.my-4.
                             We focus on teaching our students the fundamentals of the latest and greatest technologies to prepare them for their first dev role
                         button.btn.btn-primary.btn-lg Start the Enrollment
-                    img.img-fluid.w-50(src="./assets/img/showcase.svg", alt="")
+                    img.img-fluid.w-50.d-none.d-sm-block(src="./assets/img/showcase.svg", alt="")
+        //- newsletter
+        section.bg-primary.text-light.p-5
+            .container
+                .d-md-flex.justify-content-between.align-items-center
+                    h3.mb-3.mb-md-0 Sign Up for Our Newsletter
+
+                    .input-group.news-input
+                        input.form-control(type="text" placeholder="Enter Email")
+                        button.btn.btn-dark.btn-lg(type="button") 
         script(type="module" src="./assets/js/main.js")
 
