--- a/index.pug
+++ b/index.pug
@@ -44,10 +44,29 @@ html(lang="en")
 
         //- bboxes 
         section.p-5
-            .container
-                .row.text-center
-                    .col-md
-                        .card.bg-dark.text-light
-                            
+            div.container
+                div.row.text-center
+                    div.col-md
+                        div.card.bg-dark.text-light
+                            div.h1.mb-3
+                                i.bi.bi-laptop
+                            h3.card-title.mb-3 Virtual
+                            p.card-text.
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, obcaecati.
+                            a.btn.btn-dark(href="#") Read More 
+                        div.card.bg-dark.text-light
+                            .h1.mb-3
+                                i.bi.bi-laptop
+                            h3.card-title.mb-3 Virtual
+                            p.card-text.
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, obcaecati.
+                            a.btn.btn-dark(href="#") Read More 
+                        div.card.bg-dark.text-light
+                            .h1.mb-3
+                                i.bi.bi-laptop
+                            h3.card-title.mb-3 Virtual
+                            p.card-text.
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, obcaecati.
+                            a.btn.btn-dark(href="#") Read More 
         script(type="module" src="./assets/js/main.js")
 
