--- a/index.pug
+++ b/index.pug
@@ -45,28 +45,55 @@ html(lang="en")
         //- bboxes 
         section.p-5
             div.container
-                div.row.text-center
+                div.row.text-center.g-4
                     div.col-md
                         div.card.bg-dark.text-light
+                        div.card-body.text-center
                             div.h1.mb-3
                                 i.bi.bi-laptop
                             h3.card-title.mb-3 Virtual
                             p.card-text.
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, obcaecati.
-                            a.btn.btn-dark(href="#") Read More 
-                        div.card.bg-dark.text-light
-                            .h1.mb-3
-                                i.bi.bi-laptop
-                            h3.card-title.mb-3 Virtual
+                            a.btn.btn-primary(href="#") Read More 
+                    div.col-md
+                        div.card.bg-secondary.text-light
+                        div.card-body.text-center
+                            div.h1.mb-3
+                                i.bi.bi-person-square
+                            h3.card-title.mb-3 Hybrid
                             p.card-text.
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, obcaecati.
                             a.btn.btn-dark(href="#") Read More 
+                    div.col-md
                         div.card.bg-dark.text-light
-                            .h1.mb-3
-                                i.bi.bi-laptop
-                            h3.card-title.mb-3 Virtual
+                        div.card-body.text-center
+                            div.h1.mb-3
+                                i.bi.bi-people
+                            h3.card-title.mb-3 In Person
                             p.card-text.
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, obcaecati.
-                            a.btn.btn-dark(href="#") Read More 
+                            a.btn.btn-primary(href="#") Read More 
+        section#learn.p-5
+            .container.row.align-items-center.justify-content-between
+                .col-md
+                    img.img-fluid(src="./assets/img/fundamentals.svg", alt="")
+                .col-md.p-5
+                    h2 Learn The Fundamentals
+                    p.lead. 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus enim asperiores vitae, assumenda maxime ullam!
+                    a.btn.btn-light.mt-3(href="#") Read More
+                        i.bi bi-chevron-right
+
+                            a.btn.btn-primary(href="#") Read More 
+        section#learn.p-5.bg-dark
+            .container.row.align-items-center.justify-content-between
+                .col-md.p-5
+                    h2 Learn The Fundamentals
+                    p.lead. 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus enim asperiores vitae, assumenda maxime ullam!
+                    a.btn.btn-light.mt-3(href="#") Read More
+                        i.bi bi-chevron-right
+                .col-md
+                    img.img-fluid(src="./assets/img/react.svg", alt="")
         script(type="module" src="./assets/js/main.js")
 
