--- a/index.pug
+++ b/index.pug
@@ -81,19 +81,20 @@ html(lang="en")
                     h2 Learn The Fundamentals
                     p.lead. 
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus enim asperiores vitae, assumenda maxime ullam!
-                    a.btn.btn-light.mt-3(href="#") Read More
-                        i.bi bi-chevron-right
-
-                            a.btn.btn-primary(href="#") Read More 
-        section#learn.p-5.bg-dark
+                    a.btn.btn-primary.mt-3(href="#") Read More
+                        i.bi.bi-chevron-right
+        section#learn.p-5.bg-dark.text-light
             .container.row.align-items-center.justify-content-between
                 .col-md.p-5
-                    h2 Learn The Fundamentals
+                    h2 Learn React
                     p.lead. 
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus enim asperiores vitae, assumenda maxime ullam!
                     a.btn.btn-light.mt-3(href="#") Read More
-                        i.bi bi-chevron-right
+                        i.bi.bi-chevron-right
                 .col-md
                     img.img-fluid(src="./assets/img/react.svg", alt="")
+        //- question accordion
+        section#questions.p-5
+            
         script(type="module" src="./assets/js/main.js")
 
