--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,3 +1,15 @@
 
 @import url(./abstracts/_variables.scss);
 @import "~bootstrap/scss/bootstrap";
+
+body::before {
+    display: block;
+    content: " "
+   // height: 60px;
+}
+
+@media (min-width: 768px) {
+    .news-input {
+        width: 50%;
+    }
+}
