updated css file

--- a/index.pug
+++ b/index.pug
@@ -4,7 +4,7 @@ html(lang="en")
         meta(http-equiv="Content-Type", content="text/html;charset=UTF-8")
         meta(name="viewport", content="width=, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="IE=7")
-        link(rel="stylesheet", href="./style.css")
+        link(rel="stylesheet", href="./assets/scss/main.css")
         title Frontend Bootcamp
         link(rel="stylesheet", href="./assets/scss/main.scss")
 
