--- a/index.pug
+++ b/index.pug
@@ -31,7 +31,7 @@ html(lang="en")
                             span.text-warning Web Developer
                         p.lead.my-4.
                             We focus on teaching our students the fundamentals of the latest and greatest technologies to prepare them for their first dev role
-                        button.btn.btn-primary.btn-lg Start the Enrollment
+                        button.btn.btn-primary.btn-lg(data-bs-toggle="modal" data-bs-target="#enroll") Start the Enrollment
                     img.img-fluid.w-50.d-none.d-sm-block(src="./assets/img/showcase.svg", alt="")
         //- newsletter
         section.bg-primary.text-light.p-5
@@ -198,13 +198,46 @@ html(lang="en")
                                 p student@frontendbc.test 
                     .col-md
                         div#map(style='width: 400px; height: 300px;')
-        script(src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js")
-        script(src="")mapboxgl.accessToken = 'pk.eyJ1IjoiaGFyZWluZmVybm8iLCJhIjoiY2tnbGFhbGk2MDB4aTJ5bnVhaWhkdWxwbSJ9.H-4AVylWWGLlgtz89ll1Aw';
-  var map = new mapboxgl.Map({
-    container: 'map',
-    style: 'mapbox://styles/mapbox/streets-v11'
-    center: [-71.060982, 42.35725],
-    zoom: 18,
-  });
+        footer.p-5.bg-dark.text-white.text-center.position-relative
+            .container
+                p.lead Copyright &copy 2021 Frontend Bootcamp
+                a.position-absolute.bottom-0.end-0.p-5(href="#") 
+                    i.bi.bi-arrow-up-circle.h1
+
+        .modal(tab="-1")
+            .modal-dialog
+                .modal-content
+                    .modal-header
+                        h5.modal-title Modal Title
+                        button.btn-close(type="button" data-bs-dismiss="modal")
+                    .modal-body
+                        p.lead Fill Out this form and we will get back to you 
+                        form
+                            .mb-3
+                                label.col-form-label(for="first-name") First Name:
+                                input.form-control#first-name
+                            .mb-3
+                                label.col-form-label(for="last-name") Last Name:
+                                input.form-control#last-name
+                            .mb-3
+                                label.col-form-label(for="email") Email:
+                                input.form-control#email
+                            .mb-3
+                                label.col-form-label(for="phone") Phone:
+                                input.form-control#phone
+                    .modal-footer
+                        button.btn.btn-secondary(type="button" data-bs-dismiss="modal") Close
+                        button.btn.btn-primary(type="button") Submit
+
+        //- script(src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js")
+        //- script(src="")mapboxgl.accessToken = 'pk.eyJ1IjoiaGFyZWluZmVybm8iLCJhIjoiY2tnbGFhbGk2MDB4aTJ5bnVhaWhkdWxwbSJ9.H-4AVylWWGLlgtz89ll1Aw';
+        //- var map = new mapboxgl.Map({
+        //-     container: 'map',
+        //-     style: 'mapbox://styles/mapbox/streets-v11'
+        //-     center: [-71.060982, 42.35725],
+        //-     zoom: 18,
+        //- });
+    
         script(type="module" src="./assets/js/main.js")
+        
 
