--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,5 @@
 
-@import url(./abstracts/_variables.scss);
+@import "./abstracts/_variables.scss";
 @import "~bootstrap/scss/bootstrap";
 
 body::before {
