--- a/index.pug
+++ b/index.pug
@@ -183,19 +183,19 @@ html(lang="en")
                         ul.list-group.list-group-flush.lead
                             li.list-group-item
                                 span.fw-bold Main Location: 
-                                p 50 Main st Boston, MA 
+                                p.inline 50 Main st Boston, MA 
                             li.list-group-item
                                 span.fw-bold Enrollment Phone: 
-                                p (333) 333-3333
+                                p.inline (333) 333-3333
                             li.list-group-item
                                 span.fw-bold Student Phone: 
-                                p (333) 333-3333
+                                p.inline (333) 333-3333
                             li.list-group-item
                                 span.fw-bold Enrollment Email: 
-                                p enroll@frontendbc.test 
+                                p.inline enroll@frontendbc.test 
                             li.list-group-item
                                 span.fw-bold Student Email: 
-                                p student@frontendbc.test 
+                                p.inline student@frontendbc.test 
                     .col-md
                         div#map(style='width: 400px; height: 300px;')
         footer.p-5.bg-dark.text-white.text-center.position-relative
