--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,9 +3,9 @@
 //create own map
 //@import "./abstracts/custom-bs"
 
-@import "~/bootstrap/scss/functions";
-@import "~/bootstrap/scss/maps";
-@import "~/bootstrap/scss/mixins";
+//@import "~/bootstrap/scss/functions";
+//@import "~/bootstrap/scss/maps";
+//@import "~/bootstrap/scss/mixins";
 
 
 //merge the maps
