--- a/index.pug
+++ b/index.pug
@@ -8,11 +8,12 @@ html(lang="en")
         title Frontend Bootcamp
         link(rel="stylesheet", href="./assets/scss/main.scss")
         link(href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js")
-        link(href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css")
+        link(rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css")
+        link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css")
 
     body 
-        nav.navbar.navbar-expand-lg.bg-dark.navbar-dark.fixed-top
-            div.container.py-3
+        nav.navbar.navbar-expand-lg.bg-dark.navbar-dark.fixed-top.py-3
+            div.container
                 a.navbar-brand(href="#") Frontend Bootcamp
                 button.navbar-toggler(type="button" data-bs-toggle="collapse" data-bs-target="#navmenu")
                     span.navbar-toggler-icon
